--- a/views/partials/script_imports.ejs
+++ b/views/partials/script_imports.ejs
@@ -1,5 +1,5 @@
 <!-- load the d3.js library -->    
-<script src="http://d3js.org/d3.v4.min.js"></script>
+<script src="https://d3js.org/d3.v4.min.js"></script>
 
 <!--   Core JS Files   -->
 <script src="assets/js/jquery-1.10.2.js" type="text/javascript"></script>
