--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,12 +39,21 @@
 
         <div class="content">
             <div class="container-fluid">
+              <div class="row" style="margin-bottom:30px">
+                    <div class="col-md-100">
+                            <div class="header">
+                                <p class="category">The objective of this analysis is to identify how much support MISST related studies get and to analyze trends to understand how these tools are used in research.</p>
+                                <p class="category">A keyword-based approach was taken to uncover trends related to a predefined list of keywords</p>
+                            </div>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-md-100">
                         <div class="card">
                             <div class="header">
                                 <h4 class="title">Top Keywords</h4>
-                                <p class="category">10 most frequently used keywords on the IRB Forum</p>
+                                <p class="category">Represents the occurences of the 10 most common keywords across all available IRB Forum messages</p>                                
+                                <p class="category">The frequency of each</p>
                             </div>
                             <div class="content">
                                 <div id="svgContent">
