--- a/views/keyword_usage.ejs
+++ b/views/keyword_usage.ejs
@@ -54,6 +54,15 @@
         <div class="content">
             
             <div class="container-fluid">
+
+                <div class="row" style="margin-bottom:30px">
+                    <div class="col-md-100">
+                            <div class="header">
+                                <p class="category">How does the popularity of a keyword change with time?</p>
+                                <p class="category">The charts below represent the popularity of keywords across all available messages on the IRB forum over time. However, messages not associated with a date and have been omitted from this analysis. As a result of the missing data the trends presented might not reflect reality.</p>
+                            </div>
+                    </div>
+                </div>
                 
                 
                 <div class="row">
@@ -61,7 +70,7 @@
                         <div class="card">
                             <div class="header">
                                 <h4 class="title">privacy</h4>
-                                <p class="category">Number of times keyword has been used over time</p>
+                                <p class="category">"privacy" saw a spike in its popularity towards the beginning and end of 2015</p>
                             </div>
                             <div class="content">
                                 <div id="privacy">
@@ -76,7 +85,7 @@
                         <div class="card">
                             <div class="header">
                                 <h4 class="title">share</h4>
-                                <p class="category">Number of times keyword has been used over time</p>
+                                <p class="category">"share" hit its highest popularity around July 2014 and September 2014</p>
                             </div>
                             <div class="content">
                                 <div id="share">
@@ -92,7 +101,7 @@
                         <div class="card">
                             <div class="header">
                                 <h4 class="title">post</h4>
-                                <p class="category">Number of times keyword has been used over time</p>
+                                <p class="category">"post" saw an increase in its usage over time with intermittent spikes in 2014 and 2015</p>
                             </div>
                             <div class="content">
                                 <div id="post">
@@ -108,7 +117,7 @@
                         <div class="card">
                             <div class="header">
                                 <h4 class="title">internet</h4>
-                                <p class="category">Number of times keyword has been used over time</p>
+                                <p class="category">"internet" was not extensively used except for in 2014</p>
                             </div>
                             <div class="content">
                                 <div id="internet">
@@ -123,7 +132,7 @@
                         <div class="card">
                             <div class="header">
                                 <h4 class="title">mobile</h4>
-                                <p class="category">Number of times keyword has been used over time</p>
+                                <p class="category">"mobile" was scarcely used except for in 2015</p>
                             </div>
                             <div class="content">
                                 <div id="mobile">
@@ -138,7 +147,7 @@
                         <div class="card">
                             <div class="header">
                                 <h4 class="title">video</h4>
-                                <p class="category">Number of times keyword has been used over time</p>
+                                <p class="category">"video" saw a decline in its usage since 2013</p>
                             </div>
                             <div class="content">
                                 <div id="video">
@@ -153,7 +162,7 @@
                         <div class="card">
                             <div class="header">
                                 <h4 class="title">third party</h4>
-                                <p class="category">Number of times keyword has been used over time</p>
+                                <p class="category">"third party" has been used consistently with short spikes over the years</p>
                             </div>
                             <div class="content">
                                 <div id="thirdparty">
@@ -168,7 +177,7 @@
                         <div class="card">
                             <div class="header">
                                 <h4 class="title">tech</h4>
-                                <p class="category">Number of times keyword has been used over time</p>
+                                <p class="category">"tech" seems to have been used consistently across the years. However this could be due to missing data and might not represent the actual trend</p>
                             </div>
                             <div class="content">
                                 <div id="tech">
@@ -183,7 +192,7 @@
                         <div class="card">
                             <div class="header">
                                 <h4 class="title">facebook</h4>
-                                <p class="category">Number of times keyword has been used over time</p>
+                                <p class="category">"facebook" saw a large spike in it's usage in 2014</p>
                             </div>
                             <div class="content">
                                 <div id="facebook">
@@ -198,7 +207,7 @@
                         <div class="card">
                             <div class="header">
                                 <h4 class="title">image</h4>
-                                <p class="category">Number of times keyword has been used over time</p>
+                                <p class="category">"image" seems to have been used fairly consistently through the years</p>
                             </div>
                             <div class="content">
                                 <div id="image">
