--- a/views/keyword_usage.ejs
+++ b/views/keyword_usage.ejs
@@ -192,7 +192,7 @@
                         <div class="card">
                             <div class="header">
                                 <h4 class="title">facebook</h4>
-                                <p class="category">"facebook" saw a large spike in it's usage in 2014</p>
+                                <p class="category">"facebook" saw a large spike in its usage in 2014</p>
                             </div>
                             <div class="content">
                                 <div id="facebook">
