--- a/views/keyword_usage.ejs
+++ b/views/keyword_usage.ejs
@@ -59,7 +59,7 @@
                     <div class="col-md-100">
                             <div class="header">
                                 <p class="category">How does the popularity of a keyword change with time?</p>
-                                <p class="category">The charts below represent the popularity of keywords across all available messages on the IRB forum over time. However, messages not associated with a date and have been omitted from this analysis. As a result of the missing data the trends presented might not reflect reality.</p>
+                                <p class="category">The charts below represent the popularity of keywords across all available messages on the IRB forum over time. However, a number of messages were not associated with a date and have been omitted from this analysis. As a result of the missing data the trends presented might not reflect reality.</p>
                             </div>
                     </div>
                 </div>
